networkpolicy/networkpolicy__basic_kafka_setup__minio__from__ingress-apisix__ingress__ports__9000__nr38__lines18.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minio--from--ingress-apisix--ingress--ports--9000--nr38
  namespace: minio
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          stacktic.io/namespace: ingress-apisix
    ports:
    - protocol: TCP
      port: 9000
